# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  gitignore  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml  main.yml
gendiff/: __init__.py  ast_builder.py  constants.py  diff_builder.py  evaluator.py  file_parser.py  gendiff.py  generator.py  input_parser.py
gendiff/formaters/: __init__.py  json.py  main.py  plain.py  string.py  stylish.py
gendiff/formatters/: __init__.py  json.py  plain.py
gendiff/scripts/: gendiff.py
tests/: .coverage  conftest.py  expected.py  test_basics.py  test_diff.py  test_diff_flat.py  test_file_parser.py  test_json.py  test_json_flat.py  test_yaml.py  tests_basics.py
tests/expects/: generate_diff_stylish.txt
tests/fixtures/: tree_first .yaml  tree_first.json  tree_second.json  tree_second.yaml  wrong.json
