[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
packages = [
  { include = "gendiff" },
]
authors = ["Eduard Zhuravlev <insanerealty@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^2.10.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

